--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -31,6 +31,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawerLayout"
+        tools:openDrawer="left"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -131,6 +132,27 @@
             android:layout_height="match_parent"
              android:layout_gravity = "start"
             android:orientation="vertical">
+
+        <LinearLayout
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+            <ImageView
+                    android:src="@drawable/folderexploereicon"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+
+            <TextView
+                    android:textColor="@color/logobackground"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/alienx"
+                    android:text="폴더이동"
+                    android:textSize="20dp"
+                    android:layout_width="match_parent"
+                      android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/directoryView"
