--- a/app/src/main/res/layout/upload_item.xml
+++ b/app/src/main/res/layout/upload_item.xml
@@ -12,14 +12,14 @@
             android:layout_marginRight="10dp"
             android:layout_gravity="center_vertical"
             android:id="@+id/uploadItemImage"
-            android:src="@drawable/minusicon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:src="@drawable/imgbuttonselector"
+            android:layout_width="35dp"
+            android:layout_height="35dp"/>
 
     <TextView
             android:fontFamily="@font/alienx"
             android:id="@+id/uploadFileName"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:textColor="#000"
             android:layout_toRightOf="@+id/uploadItemImage"
             android:layout_alignParentRight="true"
