--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -156,6 +156,7 @@
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/logobackgroundtext2"
                     android:imeOptions="actionDone"
+                    android:inputType="text"
                     android:hint="****"/>
         </LinearLayout>
 
