--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -4,7 +4,8 @@
 <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
@@ -18,20 +19,21 @@
                 android:layout_height="wrap_content"
                 android:background="@color/logobackground">
 
-            <ImageView
-                    android:src="@drawable/daljin_logo_horizon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
+                <ImageView
+                        android:src="@drawable/daljin_logo_horizon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
 <android.support.v4.widget.DrawerLayout
         android:layout_marginTop="?attr/actionBarSize"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+
         android:id="@+id/drawerLayout"
-        tools:openDrawer="left"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -45,7 +47,6 @@
 
                 <LinearLayout
                         android:id="@+id/topLayout"
-                        android:layout_below="@id/toolbar"
                         android:layout_centerHorizontal="true"
                         android:layout_width="match_parent"
                         android:layout_margin="5dp"
@@ -82,9 +83,39 @@
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_above="@+id/navBottom"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentStart="true"
                         />
+
+            <LinearLayout
+                    android:visibility="invisible"
+                    android:id="@+id/notfoundLayout"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:layout_below="@+id/topLayout"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_above="@+id/navBottom"
+                    android:layout_width="0dp" android:layout_height="0dp">
+
+                <ImageView
+                        android:src="@drawable/notfoundicon"
+                        android:layout_gravity="center"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                />
+                <TextView
+                        android:fontFamily="@font/alienx"
+                        android:textSize="20dp"
+                        android:gravity="center"
+                        android:text="파일이 없습니다."
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+
+
+
 
 
             <android.support.design.widget.BottomNavigationView
@@ -113,13 +144,12 @@
         <include
                  layout= "@layout/rightsideheader"
                  android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 />
+                 android:layout_height="wrap_content"/>
+
         <include
                  layout = "@layout/rightsidebody"
                  android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 />
+                 android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
@@ -137,7 +167,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
             <ImageView
                     android:src="@drawable/folderexploereicon"
                     android:layout_width="30dp"
