--- a/app/src/main/res/menu/uploadmenu.xml
+++ b/app/src/main/res/menu/uploadmenu.xml
@@ -4,7 +4,7 @@
     <item
             android:id="@+id/uploadAllDelete"
             app:showAsAction="never"
-            android:title="전체삭제"
+            android:title="전체취소"
     />
     <item
             android:id="@+id/menuSelectFile"
